# ComputerVision

./: .gitignore  README.md
Face Detection and Measurement using OpenCV/: README.md  capture_images.py  meature_distance.py  references.txt
Image Segmentation/UNet-implementation/: .gitignore  README.md  config.py  dataset.py  model.py  reference.txt  train.py  utils.py
OCR/: CRNN Training.ipynb  README.md  references.txt
Object Detection and Measure Distance using YOLOv8/: README.md  capture_images.py  distance_estimator.py  references.txt  requirements.txt
Object Detection and Measure Distance using YOLOv8/notebook/: notebook.ipynb
Object Detection and Measure Distance using YOLOv8/scripts/: yolov8.py
Object Detection/YOLOv3-implementation/: .gitignore  README.md  config.py  dataset.py  loss.py  model.py  referencces.txt  train.py  utils.py
Serve an ML Model using FastAPI/: README.md  pyproject.toml
Serve an ML Model using FastAPI/src/: main.py
Serve an ML Model using FastAPI/src/app/: app.py
Serve an ML Model using FastAPI/src/models/: image_classifier.py  pred.py
Serve an ML Model using FastAPI/src/schemas/: schemas.py
Serve an ML Model using FastAPI/src/tests/: helper.py
Serve an ML Model using FastAPI/src/tests/performance_test/: locust_test.py
Serve an ML Model using FastAPI/src/tests/unit_test/: test_api.py
Serve an ML Model using FastAPI/src/utils/: test_images.py  utilities.py
